# lead-score-flow

./: README.md
lead_score_flow_mrinal/: .gitignore  README.md  pyproject.toml  test.py
lead_score_flow_mrinal/src/lead_score_flow/: leads.csv  main.py
lead_score_flow_mrinal/src/lead_score_flow/crews/lead_response_crew/: lead_response_crew.py
lead_score_flow_mrinal/src/lead_score_flow/crews/lead_score_crew/: lead_score_crew.py
lead_score_flow_mrinal/src/lead_score_flow/email_responses/: John Doe.txt  Linda Smith.txt  Michael Young.txt  Sarah Lee.txt  Tom Brown.txt
lead_score_flow_mrinal/src/lead_score_flow/utils/: candidateUtils.py
