[project]
name = "lead_score_flow"
version = "0.1.0"
description = "lead_score_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
lead_score_flow = "lead_score_flow.main:run"
run_crew = "lead_score_flow.main:run"
train = "lead_score_flow.main:train"
replay = "lead_score_flow.main:replay"
test = "lead_score_flow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
